<resources>
    <string name="app_name">UmAR</string>

    <!-- Schools Activity -->
    <string name="welcome">Welcome to Malaga University</string>
    <string name="select_school">Please, make the selection of your School</string>

    <!-- Profile Activity -->
    <string name="select_profile">Select your profile</string>

    <!-- Dashboard Activity -->
    <string name="title_activity_dashboard">Dashboard EN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dashboard_ar">Augmented reality</string>
    <string name="dashboard_places">Know your way around?</string>
    <string name="dashboard_qr">Scan your QR code</string>
    <string name="dashboard_info">About your School</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This feature cannot run because it does not have the camera permission.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_no_camera">No camera available. This is needed for reading the QR code..</string>
    <string name="barcode_ok">OK</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <string name="language_es">Spanish</string>
    <string name="language_en">English</string>

    <string name="select_your_favourite_language">Select your favourite language:</string>
    <string name="menu_school">School</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_language">Language</string>
    <string name="menu_about_this_app">About this app</string>
    <string name="menu_about">About</string>

    <string name="list_of_places">List of places</string>
    <string name="place_details">Place details</string>
    <string name="see_in_augmented_reality">See in augmented reality!</string>

    <string name="about_description">Description</string>
    <string name="about_location">Location</string>
    <string name="about_address">Address</string>
    <string name="about_director">Director</string>
    <string name="about_email">Email</string>
    <string name="about_concierge_phone">Concierge Phone</string>
    <string name="about_secretary_phone">Secretary Phone</string>

    <string name="scan_a_valid_qr_code_to_get_the_place_details">Scan a valid QR code to get the place details</string>

    <string name="information_exception">Sorry, server information has changed. Application should restart in order to select again your School.</string>
    <string name="need_internet">Sorry, you need internet for using this feature.</string>

    <string name="barcode_place_found">Place details:</string>
    <string name="universidad_de_malaga">Universidad de Málaga</string>
    <string name="email_informatica">director@informatica.uma.es</string>
    <string name="lat_lon_alt">Current Location: \nLat: %1$s, Long: %2$s, Alt: %3$s</string>
    <string name="gps_is_loading">GPS is loading...</string>
    <string name="distance_place">Distance: %1$s</string>
    <string name="filter_disabled">Filter disabled!</string>
    <string name="find_your_place"><i>Find your place!</i></string>

</resources>
