<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.uma.umar.ui.about.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll">

            <ImageView
                android:id="@+id/school_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:transitionName="header"
                app:layout_collapseMode="parallax"
                app:srcCompat="@mipmap/etsiiuma"
                tools:targetApi="lollipop" />

        </android.support.design.widget.CollapsingToolbarLayout>

        <TextView
            android:id="@+id/school_name_textview"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@android:color/white"
            android:ellipsize="end"
            android:gravity="start|center"
            android:maxLines="2"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:textSize="17sp"
            app:layout_scrollFlags="exitUntilCollapsed"
            tools:text="School name" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/school_content_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description_label_textview"
                style="@style/TextDarkBlue15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_description" />

            <TextView
                android:id="@+id/description_textview"
                style="@style/TextLightBlue14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="School name" />

            <TextView
                android:id="@+id/location_label_textview"
                style="@style/TextDarkBlue15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_location" />

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

            <TextView
                android:id="@+id/address_label_textview"
                style="@style/TextDarkBlue15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_address" />

            <TextView
                android:id="@+id/address_textview"
                style="@style/TextLightBlue14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="School address" />

            <TextView
                android:id="@+id/director_label_textview"
                style="@style/TextDarkBlue15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_director" />

            <TextView
                android:id="@+id/director_textview"
                style="@style/TextLightBlue14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="School director" />

            <TextView
                android:id="@+id/email_label_textview"
                style="@style/TextDarkBlue15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_email" />

            <TextView
                android:id="@+id/email_textview"
                style="@style/TextLightBlue14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="School email" />

            <TextView
                android:id="@+id/phone_concierge_label_textview"
                style="@style/TextDarkBlue15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_concierge_phone" />

            <TextView
                android:id="@+id/phone_concierge_textview"
                style="@style/TextLightBlue14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="School concierge phone" />

            <TextView
                android:id="@+id/phone_secretary_label_textview"
                style="@style/TextDarkBlue15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_secretary_phone" />

            <TextView
                android:id="@+id/phone_secretary_textview"
                style="@style/TextLightBlue14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="School secretary phone" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>