<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_16dp"
                android:paddingEnd="@dimen/margin_16dp"
                android:paddingStart="@dimen/margin_16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/welcome_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/uma_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:minHeight="75dp"
                app:srcCompat="@mipmap/uma_logo"/>

            <TextView
                android:id="@+id/select_school_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/select_your_favourite_language"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonEs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:drawableStart="@mipmap/lang_es128"
                android:text="@string/language_es"/>

            <RadioButton
                android:id="@+id/radioButtonEn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:drawableStart="@mipmap/lang_en128"
                android:text="@string/language_en"/>
        </RadioGroup>

    </LinearLayout>
</RelativeLayout>